--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <!-- AOS Animation -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
-    <title>Muhammad Iqbal</title>
+    <title>Muhammad Ikbal</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
